ensure scrollbars as visible on optionSelects

--- a/ui/components/OptionSelect/styles.module.scss
+++ b/ui/components/OptionSelect/styles.module.scss
@@ -3,7 +3,18 @@
 .optionSelect {
   margin-top: $nhsuk-gutter;
   position: relative;
-  overflow-y: auto;
   overflow-x: hidden;
   max-height: 300px;
+
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 4px;
+    width: 7px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1px rgb(255 255 255 / 87%);
+  }
 }
